[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "perchance"
version = "0.0.1"
homepage = "https://github.com/EeeMoon/perchance"
description = "Unofficial Python API for Perchance.org."
authors = ["EeeMoon"]
license = "MIT"
readme = "README.md"
include = ["pyproject.toml", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"